@@ -7621,3 +7621,6 @@ EPRINTS-3.1-beta-2
  * import_subjects will not ask for confirmation if there are no existing
     subjects
 
+2008-07-12 cjg + af05v
+ * Spun "Box" off into it's own package with some funky options.
+
